Fix JavaDoc, Shade plugin settings